--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -47,22 +47,22 @@ Es gibt viele verschiedene Methoden Probleme aus der inversen Kinematik zu löse
 \section{Grammatiken}
 \label{grammars}
 
-Eine \emph{Grammatik} ist ein Tupel $G = (\Sigma, V, S, P)$ mit 
+Eine \emph{Grammatik} ist ein Tupel $G = (\Sigma, N, S, P)$ mit 
 \begin{itemize}
  \item dem endlichen Alphabet $\Sigma$ der Terminalsymbole
- \item dem endlichen Alphabet $V$ der Nichtterminalsymbole
+ \item dem endlichen Alphabet $N$ der Nichtterminalsymbole
  \item dem Startsymbol $S \in V$ und
- \item der Menge von Produktionen $P \subseteq (V \cup \Sigma)^* V (V \cup \Sigma)^* \times (V \cup \Sigma)^*$\\ der Form $P \subseteq (V \cup \Sigma)^* V (V \cup \Sigma)^* \rightarrow (V \cup \Sigma)^*$
+ \item der Menge von Produktionen $P \subseteq (N \cup \Sigma)^* N (N \cup \Sigma)^* \times (N \cup \Sigma)^*$\\ der Form $P \subseteq (N \cup \Sigma)^* N (N \cup \Sigma)^* \rightarrow (N \cup \Sigma)^*$
 \end{itemize}
 
 Eine Teilmenge der Grammatiken bilden \emph{kontextsensitive} Grammatiken. Ihre Produktionen haben die Form
-\[\alpha A \beta \rightarrow \alpha \gamma \beta \text{ oder } S \rightarrow \epsilon\] \[\text{ mit } A \in V,~ \alpha, \beta, \gamma \in ((V \setminus \{ S \}) \cup \Sigma)^*,~ \gamma \neq \epsilon \text{ und dem leeren Wort } \epsilon.\]
+\[\alpha A \beta \rightarrow \alpha \gamma \beta \text{ oder } S \rightarrow \epsilon\] \[\text{ mit } A \in N,~ \alpha, \beta, \gamma \in ((N \setminus \{ S \}) \cup \Sigma)^*,~ \gamma \neq \epsilon \text{ und dem leeren Wort } \epsilon.\]
 
 Wiederum eine Teilmenge davon bilden \emph{kontextfreie} Grammatiken mit Produktionen der Form 
-\[A \rightarrow w \text{ mit } A \in V \text{ und } w \in (\Sigma \cup V)^*.\] \cite[Abschnitte 1.4 und 1.5]{FormalLanguageTheory}
+\[A \rightarrow w \text{ mit } A \in N \text{ und } w \in (\Sigma \cup N)^*.\] \cite[Abschnitte 1.4 und 1.5]{FormalLanguageTheory}
 
 \emph{L-Systeme} oder Lindenmayer-Systeme sind spezielle Grammatiken. Sie wurden 1968 von dem Biologen Aristid Lindenmayer vorgestellt, mit dem Zweck das Wachstum vielzelliger Lebewesen zu modellieren. Im Unterschied zu Grammatiken, bei denen Produktionen einzeln nacheinander angewendet werden, werden bei L-Systemen alle Symbole gleichzeitig ersetzt. Dies soll modellieren, dass viele Zellteilungen zur gleichen Zeit stattfinden können.\\
-Es gibt auch hier wieder verschiedene Teilmengen wie \zb kontextfreie und kontextsensitive L-Systeme. Um Verzweigungen zu modellieren, wurden zusätzlich Klammerstrukturen eingeführt. Das Teilwort innerhalb einer Klammer repräsentiert einen "`Ast"', der wiederum in sich verzweigt sein kann.\\
+Es gibt auch hier wieder verschiedene Teilmengen wie \zb kontextfreie und kontextsensitive L-Systeme. Kontextfreie L-Systeme sind aber beispielsweise keine Teilmenge kontextfreier Grammatiken. Es gibt Sprachen, die von kontextfreien L-Systemen, aber nicht von kontextfreien Grammatiken erzeugt werden können und anders herum \cite[Abbildung 1.2]{AlgorithmicBeautyOfPlants}. Um Verzweigungen zu modellieren, wurden zusätzlich Klammerstrukturen eingeführt. Das Teilwort innerhalb einer Klammer repräsentiert einen "`Ast"', der wiederum in sich verzweigt sein kann.\\
 Oft werden L-Systeme verwendet um das Wachstum von Pflanzen zu modellieren. Es gibt aber auch andere Anwendungsbeispiele, wie \zb die Generierung von Städten \cite{cityGeneration}. \cite[Kapitel 1]{AlgorithmicBeautyOfPlants}
 
 
